@@ -6,6 +6,7 @@ i-MSCP 1.0.3.0
 
 Tickets:
 	- Fixed #388: Cosmetics - Typo Error
+	- Fixed #391: HELO-Mismatch (policyd-weight)
 
 -------------------------------------------------------------------------------------
 i-MSCP 1.0.2.2 (RC3)
